--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
                   <img class="rounded-full w-11 h-11"
                     src="https://flowbite-admin-dashboard.vercel.app/images/users/bonnie-green.png" alt="Jese image">
                   <div
-                    class="absolute flex items-center justify-center w-5 h-5 ml-6 -mt-5 border border-white rounded-full bg-primary-700 dark:border-gray-700">
+                    class="absolute flex items-center justify-center w-5 h-5 ml-6 -mt-5 border border-white rounded-full dark:border-gray-700">
                     <svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20"
                       xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -1859,7 +1859,7 @@
                   </div>
                   <div class="flex items-center justify-between px-3 py-2 border-t dark:border-gray-600">
                     <button type="submit"
-                      class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800">
+                      class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900">
                       Send message
                     </button>
                     <div class="flex pl-0 space-x-1 sm:pl-2">
@@ -2144,7 +2144,7 @@
                     including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing
                     pages.</p>
                   <a href="#"
-                    class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-primary-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Learn
+                    class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Learn
                     more <svg class="w-3 h-3 ml-2" fill="currentColor" viewBox="0 0 20 20"
                       xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd"
