create: add webpack for flowbite customize

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
   <meta property="og:image" content="https://flowbite-admin-dashboard.vercel.app/images/og-image.png">
   <meta property="og:image:type" content="image/png">
 
-  <link rel="stylesheet" href="{% static 'dist/css/output.css' %}">
+  <link rel="stylesheet" href="{% static 'dist/main.css' %}">
 
   <script>
 
@@ -945,7 +945,7 @@
   </div>
 
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <script src="https://flowbite-admin-dashboard.vercel.app/app.bundle.js"></script>
+  <script src="{% static 'dist/main.bundle.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/datepicker.min.js"></script>
 
 </body>
