--- a/templates/starter.html
+++ b/templates/starter.html
@@ -14,7 +14,7 @@
 
     <link rel="canonical" href="https://github.com/app-generator/rocket-django">
 
-    <link rel="stylesheet" href="{% static 'dist/css/output.css' %}">
+    <link rel="stylesheet" href="{% static 'dist/main.css' %}">
 </head>
 
 <body>
@@ -94,7 +94,7 @@
         </div>
     </section>
 
-    <script src="{% static 'node_modules/flowbite/dist/flowbite.js' %}"></script>
+    <script src="{% static 'dist/main.bundle.js' %}"></script>
 </body>
 
 </html>
