add dynamic content

--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -42,7 +42,7 @@
 <meta property="og:image" content="https://flowbite-admin-dashboard.vercel.app/images/og-image.png">
 <meta property="og:image:type" content="image/png">
 
-<link rel="stylesheet" href="{% static 'dist/css/output.css' %}">
+<link rel="stylesheet" href="{% static 'dist/main.css' %}">
 
 <script>
 
