--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -75,7 +75,7 @@
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">Users</a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="{% url "charts" %}"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">Charts</a>
                             </li>
                             <li>
@@ -83,7 +83,7 @@
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">Datatables</a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="{% url "product_list" %}"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">API</a>
                             </li>
                         </ul>
