--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -344,12 +344,15 @@
               class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600"
               id="dropdown-2">
               <div class="px-4 py-3" role="none">
-                <p class="text-sm text-gray-900 dark:text-white" role="none">
-                  Neil Sims
-                </p>
+                {% if request.user.is_authenticated %}
+                  <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
+                    {{ request.user.email }}
+                  </p>
+                {% else %}
                 <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
-                  neil.sims@flowbite.com
+                  guest.user@flowbite.com
                 </p>
+                {% endif %}
               </div>
               <ul class="py-1" role="none">
                 <li>
@@ -368,9 +371,16 @@
                     role="menuitem">Earnings</a>
                 </li>
                 <li>
-                  <a href="{% url "signout" %}"
-                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
-                    role="menuitem">Sign out</a>
+                  {% if request.user.is_authenticated %}
+                    <a href="{% url 'signout' %}"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+                      role="menuitem">Sign Out</a>                  
+                  {% else %}
+                    <a href="{% url 'signin' %}"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+                      role="menuitem">Sign In</a>
+                  {% endif %}
+
                 </li>
               </ul>
             </div>
