--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -37,7 +37,7 @@
                     </li>
                     {% if request.user.is_authenticated %}
                     <li>
-                        <a href="{% url "profile" %}"
+                        <a href="{% url 'profile' %}"
                             class="flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700 ">
                             <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
                                 fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -67,7 +67,7 @@
                         </button>
                         <ul id="dropdown-dashboard" class="hidden py-2 space-y-2">
                             <li>
-                                <a href="{% url "tasks" %}"
+                                <a href="{% url 'tasks' %}"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">Tasks</a>
                             </li>
                             <li>
@@ -75,15 +75,15 @@
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">Users</a>
                             </li>
                             <li>
-                                <a href="{% url "charts" %}"
+                                <a href="{% url 'charts' %}"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">Charts</a>
                             </li>
                             <li>
-                                <a href="{% url "datatables" %}"
+                                <a href="{% url 'datatables' %}"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">Datatables</a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="/api/product/"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">API</a>
                             </li>
                         </ul>
