--- a/templates/layouts/base-auth.html
+++ b/templates/layouts/base-auth.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en" class="dark">
 <head>
@@ -57,7 +59,7 @@
     </main>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="https://flowbite-admin-dashboard.vercel.app//app.bundle.js"></script>
+    <script src="{% static 'dist/main.bundle.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/datepicker.min.js"></script>
     
   </body>
