--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -30,8 +30,7 @@
         {% include "includes/footer.html" %}
       {% endblock footer %}
       <p class="my-10 text-sm text-center text-gray-500">
-        &copy; 2019-2023 <a href="https://flowbite.com/" class="hover:underline" target="_blank">Flowbite.com</a>. All
-        rights reserved.
+        &copy; Flowbite - Coded by <a href="https://appseed.us" class="hover:underline" target="_blank">AppSeed</a>
       </p>
 
     </div>
