--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -12,6 +12,8 @@
 
 <body class="bg-gray-50 dark:bg-gray-800">
 
+  {% block messages %}{% endblock messages %}
+
   {% block navigation %}
     {% include "includes/navigation.html" %}
   {% endblock navigation %}
