Navogation - CleanUP Links

--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -361,19 +361,9 @@
               </div>
               <ul class="py-1" role="none">
                 <li>
-                  <a href="#"
+                  <a href="/"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
                     role="menuitem">Dashboard</a>
-                </li>
-                <li>
-                  <a href="#"
-                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
-                    role="menuitem">Settings</a>
-                </li>
-                <li>
-                  <a href="#"
-                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
-                    role="menuitem">Earnings</a>
                 </li>
                 <li>
                   {% if request.user.is_authenticated %}
